--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -18,10 +18,12 @@
 }
 
 
-.portfolio__item-iamge{
+.portfolio__item-image{
   border-radius: 1.5rem;
   overflow: hidden;
 }
+
+
 
 .portfolio__item h3{
   margin: 1.2rem 0 2rem;
